Code layout remake

--- a/csbox/templates/student/single_course.html
+++ b/csbox/templates/student/single_course.html
@@ -137,7 +137,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     </div>
                                 </div>
                                 <button class="pop-close" data-popup="d{{post.id}}">Cancel</button>
-                                <a class="del-confirm-btn" href="{%url 'faculty-del-post' post.session.sessionName post.session.id post.id%}">Confirm Delete</a>
+                                <a class="del-confirm-btn" href="{%url 'student-del-post' post.session.sessionName post.session.id post.id%}">Confirm Delete</a>
                             </div>
                         </div>
     
