teacher single course

--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -12,18 +12,22 @@
     left: 0;
     width: 400px;
     height: 270px;
+    border: 2px solid #0A4D68;
+    border-radius: 10px;
+    padding: .5rem;
     /* background-color: green; */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .course_title{
     width: 100%;
-    height: 22%;
-    font-size: 1.7rem;
+    height: 19%;
+    font-size: 1.4rem;
+    font-weight: 500;
     color: black;
     overflow: hidden;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid black;
     display: flex;
 }
 .course_details{
@@ -35,10 +39,10 @@
     justify-content: space-around;
 }
 .element{
-    font-size: 1.1rem;
+    font-size:1rem;
 }
 .bold{
-    font-weight: bold;
+    font-weight: 400;
     color: black;
 }
 .token{
@@ -115,6 +119,42 @@
     background-color: rgb(255, 255, 255);
 }
 
+.repo_section ul{
+    width: 100%;
+    height: 100%;
+    list-style: none;
+}
+
+.repo_section .item{
+    padding: .4rem .5rem;
+    margin: .5rem 0;
+    font-size: .85rem;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+}
+.item .item-file{
+    font-size: 1.12rem;
+    text-decoration: none;
+    margin-bottom: .3rem;
+}
+.item .file_btns{
+    margin-top: .4rem;
+    width: 33%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.repo_section .empty{
+    font-size: 2rem;
+    font-weight: 700;
+    color: rgba(65, 65, 65, 0.357);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* ================================================= */
 
 .post_section{
@@ -122,7 +162,7 @@
     right: 0;
     /* top: 20px; */
     width: 780px;
-    height:738px;
+    height:755px;
     overflow: scroll;
     padding-right: 1.5rem;
     padding-top: 20px;
@@ -185,6 +225,7 @@
 }
 .time{
     color: rgb(66, 103, 255);
+    font-size: .8rem;
 }
 .post-body{
     padding: 1rem 0;
@@ -200,6 +241,33 @@
     font-weight: 300;
     line-height: 1.9rem;
 }
+.expand{
+    width: 100%;
+    padding: .4rem 0;
+    margin-bottom: .55rem;
+    cursor: pointer;
+}
+#post_upFile{
+    display: none;
+}
+.files{
+    width: 100%;
+}
+.files .each{
+    background-color: rgba(209, 209, 209, 0.848);
+    color: #008efb;
+    padding: .6rem .5rem;
+    border-radius: 5px;
+    margin-bottom: .7rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.each a{
+    text-decoration: none;
+    color: black;
+}
+
 
 .toggle-button{
     position: absolute;
