--- a/csbox/static/css/teacher/all_courses.css
+++ b/csbox/static/css/teacher/all_courses.css
@@ -160,6 +160,16 @@
     transition: all .2s ease;
 }
 
+.empty_session{
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:2.5rem;
+    font-weight: bold;
+    color: rgba(146, 146, 146, 0.586);
+}
+
 .popupContainer {
     display: none;
     position: fixed;
