--- a/csbox/static/css/teacher/home.css
+++ b/csbox/static/css/teacher/home.css
@@ -33,6 +33,15 @@
     padding: 0 15px 0 10px;
     height: 100%;
 }
+.announcement-content .no_announc{
+    width: 100%;
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: rgba(61, 61, 61, 0.789);
+}
 .list{
     height: 100%;
     list-style: none;
@@ -97,6 +106,16 @@
     padding-left: 5px;
     max-height: 94%;
     overflow: scroll;
+}
+.post-content .no_post{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    font-weight: bold;
+    color: rgba(128, 128, 128, 0.559);
 }
 .post-content a{
     text-decoration: none;
