--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -167,7 +167,15 @@
     padding-right: 1.5rem;
     padding-top: 20px;
 }
-
+.post_section .empty_post{
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:2.5rem;
+    font-weight:bold;
+    color: rgba(173, 173, 173, 0.421);
+}
 .post_btn{
     width: 40%;
     height: 6%;
