--- a/csbox/static/css/teacher/teacher_profile.css
+++ b/csbox/static/css/teacher/teacher_profile.css
@@ -34,6 +34,7 @@
     width:170px;
     height: 170px;
     background-color: rgb(75, 75, 75);
+    border: 5px solid rgba(200, 200, 200, 0.786);
     border-radius: 50%;
     margin-right: 3rem;
     display: flex;
