--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -3,7 +3,6 @@
 .wraper{
     width: 100%;
     height: 93vh;
-    /* background-color: crimson; */
     position: relative;
 }
 .course_info{
@@ -15,7 +14,6 @@
     border: 2px solid #0A4D68;
     border-radius: 10px;
     padding: .5rem;
-    /* background-color: green; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -33,7 +31,6 @@
 .course_details{
     width: 100%;
     height: 70%;
-    /* background-color: purple; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -113,12 +110,40 @@
 }
 
 .member_section .item{
-    padding: .7rem .5rem;
+    padding: .4rem .5rem;
     margin: .5rem 0;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
+.item .group{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.group .avater{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 5px;
+    overflow: hidden;
+    background-color: gray;
+}
+.group .pp{
+    width: 100%;
+}
+.group p{
+    color: black;
+    font-size: .9rem;
+}
+.item .group2{
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .repo_section ul{
     width: 100%;
     height: 100%;
@@ -144,7 +169,7 @@
     justify-content: space-between;
     align-items: center;
 }
-.repo_section .empty{
+ .empty{
     font-size: 2rem;
     font-weight: 700;
     color: rgba(65, 65, 65, 0.357);
@@ -160,7 +185,6 @@
 .post_section{
     position: absolute;
     right: 0;
-    /* top: 20px; */
     width: 780px;
     height:755px;
     overflow: scroll;
@@ -199,7 +223,6 @@
 
 .post-card{
     width: 100%;
-    padding: 2rem 0;
     margin: 1.5rem 0;
     padding: 10px;
     border: 1.5px solid black;
@@ -208,7 +231,6 @@
 }
 .post-card-red{
     width: 100%;
-    padding: 2rem 0;
     margin: 1.5rem 0;
     padding: 10px;
     border: 3px solid rgb(248, 65, 65);
@@ -339,7 +361,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: relative;
 }
 
 .post-delContent .head {
@@ -400,7 +421,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: relative;
 }
 
 .edit-head{
@@ -482,7 +502,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: relative;
+    /* position: relative; */
 }
 
 
@@ -602,7 +622,6 @@
     margin-bottom: 5px;
     width: auto;
     list-style-type: none;
-    display: flex;
     margin-right: 15px;
     border: 1px solid #0A4D68;
     border-radius: 10px;
