--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -126,6 +126,7 @@
 .group .avater{
     width: 30px;
     height: 30px;
+    border:1px solid gray;
     border-radius: 50%;
     margin-right: 5px;
     overflow: hidden;
@@ -139,10 +140,95 @@
     font-size: .9rem;
 }
 .item .group2{
-    width: 30%;
+    width: 32%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.group2 a{
+    text-decoration: none;
+    padding: .2rem;
+    font-size:.8rem;
+    border: 1.5px solid rgb(20, 123, 220);
+    color: rgb(20, 123, 220);
+    background: none;
+    border-radius: 5px;
+    transition: all .25s ease;
+}
+.group2 a:hover{
+    background-color: rgb(20, 123, 220);
+    border: 1.5px solid rgb(20, 123, 220);
+    color: white;
+    cursor: pointer;
+}
+.group2 button{
+    padding: .2rem;
+    font-size:.8rem;
+    border: 1.5px solid crimson;
+    color: crimson;
+    background: none;
+    border-radius: 5px;
+    transition: all .25s ease;
+}
+.group2 button:hover{
+    background-color: crimson;
+    border: 1.5px solid crimson;
+    color: white;
+    cursor: pointer;
+}
+
+.remove_memberPopup{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.787);
+}
+.rm_memberContainer{
+    background-color: white;
+    width: auto;
+    height: auto;
+    padding: 20px;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.rm_memberContainer p{
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+    color: Red;
+}
+.grp{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.popclose{
+    padding: 8px 15px;
+    background: none;
+    border: none;
+    font-size: .9rem;
+    background-color:#10B0A7;
+    color: white;
+    border-radius: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.yes{
+    text-decoration: none;
+    padding: 8px 15px;
+    font-size:.9rem;
+    background-color: crimson;
+    color: white;
+    border-radius: 5px;
+    margin-right: 5px;
+    cursor: pointer;
 }
 .repo_section ul{
     width: 100%;
@@ -271,15 +357,7 @@
     font-weight: 300;
     line-height: 1.9rem;
 }
-.expand{
-    width: 100%;
-    padding: .4rem 0;
-    margin-bottom: .55rem;
-    cursor: pointer;
-}
-#post_upFile{
-    display: none;
-}
+
 .files{
     width: 100%;
 }
