--- a/csbox/templates/layout.html
+++ b/csbox/templates/layout.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{%static 'css/layout.css'%}"/>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
         function toggleDropdown() {
